Version 1.3.1+svn:
 * graphics
   * added the --max-fps command line switch
   * changed the drawing logic so it no longer delays when the drawing is
   lagging
 * language and i18n:
   * updated translations: Danish
   * new translations: Indonesian

Version 1.3.1:
 * Campaignd
   * first argument is number of threads to use, defaults to 5
 * campaigns
   * Eastern Invasion:
     * Drowned Planes the dragon starts on grassland
     * The Crossing, fixed a bug which prevented the undead leader spawned 
        at turn 8 to have a keep
     * The Duel the keep is replaced by a castle tile instead of grass
   * Heir to the Throne
     * removed Mountain Pass and Valley of Statues from the repository
     * added underpinnings of a unlockable, optional, bonus scenario
     * Battle_for_Wesnoth: allow Asheviere to recruit non-scout units
     * In Elven Council the leaders are no longer standing in a keep
       but in a normal castle tile
   * The South Guard
     * Proven by the Sword: tell Deoran to go to Westin if the citadel is
      secured (fixes #7360)
   * Two Brothers
     * updated the portrait of Bjarn to match the new mage colors
     * removed Skelletons as enemys in the first mission on easy, and
       Skelleton Archer as enemy on hard
     * added Ghouls as enemys for all undeads
     * some map updates to make them easier (2nd mission) or look better (all
       the other missions)
 * editor
   * allow maps to be loaded from scenario files and written back to them
   * upon entering a new starting position the underlaying terrain 
     remains unchanged
   * when overwriting a starting position and undo that action
      only the terrain was undone, not the starting position that's fixed
   * flipping a map over the Y axis no longer resizes the map
   * flipping a map over the X axis uses slightly different filler rules
   * added the paste option to the edit menu
   * added the option to split the terrains is groups